<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sunshine_light_blue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_app_label"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingBottom="25dp" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/spotify_streamer"
        android:onClick="spotifyStreamer"
        android:background="@color/orange"
        android:padding="20dp"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/scores_app"
        android:onClick="scoresApp"
        android:background="@color/orange"
        android:padding="10dp" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/library_app"
        android:onClick="libraryApp"
        android:background="@color/orange"
        android:padding="20dp" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/build_it_bigger"
        android:onClick="buildItBigger"
        android:background="@color/orange"
        android:padding="20dp" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/xyz_reader"
        android:onClick="xyzReader"
        android:background="@color/orange"
        android:padding="20dp" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/capstone_app"
        android:onClick="capstoneApp"
        android:background="@color/magneta"
        android:padding="20dp" />

</LinearLayout>
